--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,10 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "typescript": "^4.9.5",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "tailwind-merge": "^1.10.0",
+    "tailwindcss-animate": "^1.0.5",
+    "class-variance-authority": "^0.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,6 +61,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint-config-airbnb": "^19.0.4",
-    "npm-check-updates": "^16.14.5"
+    "npm-check-updates": "^16.14.5",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
